respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Codigoposta_cat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asenta el código postal (PO, BOX) en donde se encuentra ubicado el domicilio</description>
        <label>Codigo Postal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Codigo Postal</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Accounts (Codigo Postal)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Colaboration_Score__c</fullName>
        <formula>CASE( Colaboration__c , &apos;1&apos;, IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeYm&amp;oid=00Db0000000cLrt&amp;lastMod=1386161894000&apos;, &apos;Colaboration&apos;), &apos;2&apos;, IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeYr&amp;oid=00Db0000000cLrt&amp;lastMod=1386161968000&apos;, &apos;Colaboration&apos;), &apos;3&apos;, IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeYw&amp;oid=00Db0000000cLrt&amp;lastMod=1386162034000&apos;, &apos;Colaboration&apos;), &apos;4&apos;, IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeZ6&amp;oid=00Db0000000cLrt&amp;lastMod=1386162078000&apos;, &apos;Colaboration&apos;), &apos;5&apos;,
 IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeZG&amp;oid=00Db0000000cLrt&amp;lastMod=1386162247000&apos;, &apos;Colaboration&apos;), IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeYm&amp;oid=00Db0000000cLrt&amp;lastMod=1386161894000&apos;, &apos;Colaboration&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Colaboration (Score)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colaboration__c</fullName>
        <label>Colaboration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Colonia_cat__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Expresa la clave de la colonia o dato análogo</description>
        <inlineHelpText>Expresa la clave de la colonia o dato análogo</inlineHelpText>
        <label>Colonia</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Colonia</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comdom_cta__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>(Teléfono,Agua,Luz) no mayor 3 meses</inlineHelpText>
        <label>Comprobante de Domicilio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comentarios_lead_marketing__c</fullName>
        <description>Campo para agregar los comentarios lead marketing. Si este se completa, el campo &quot;Seguimiento&quot; pasa a Cliente contactado</description>
        <label>Comentarios Marketing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comgps_cta__c</fullName>
        <label>Compañía GPS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compra_de_mes__c</fullName>
        <formula>AND(
 Fecha_ultima_cotizacion_date__c &gt;= TODAY() - 30
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compra de mes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comprador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comprador</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignee Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Consignee__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignee</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Consignee)</relationshipLabel>
        <relationshipName>NEU_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contrasena__c</fullName>
        <label>Contraseña</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convfirm_cta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convenio firmado Pak2go y proveedor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Costo_reposicion_barra_logistica__c</fullName>
        <label>Costo reposición x barra logistica</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_of_Load__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country of Load/Discharge</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Amount_Request__c</fullName>
        <label>Credit Amount Request</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Terms__c</fullName>
        <label>Credit Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contado</fullName>
                </value>
                <value>
                    <fullName>Pago Inmediato</fullName>
                </value>
                <value>
                    <fullName>1 Día</fullName>
                </value>
                <value>
                    <fullName>2 Días</fullName>
                </value>
                <value>
                    <fullName>3 Días</fullName>
                </value>
                <value>
                    <fullName>4 Días</fullName>
                </value>
                <value>
                    <fullName>5 Días</fullName>
                </value>
                <value>
                    <fullName>7 Días</fullName>
                </value>
                <value>
                    <fullName>8 Días</fullName>
                </value>
                <value>
                    <fullName>9 Días</fullName>
                </value>
                <value>
                    <fullName>10 Días</fullName>
                </value>
                <value>
                    <fullName>15 Días</fullName>
                </value>
                <value>
                    <fullName>16 Días</fullName>
                </value>
                <value>
                    <fullName>19 Días</fullName>
                </value>
                <value>
                    <fullName>20 Días</fullName>
                </value>
                <value>
                    <fullName>21 Días</fullName>
                </value>
                <value>
                    <fullName>22 Días</fullName>
                </value>
                <value>
                    <fullName>23 Días</fullName>
                </value>
                <value>
                    <fullName>25 Días</fullName>
                </value>
                <value>
                    <fullName>28 Días</fullName>
                </value>
                <value>
                    <fullName>31 Días</fullName>
                </value>
                <value>
                    <fullName>38 Días</fullName>
                </value>
                <value>
                    <fullName>60 Días</fullName>
                </value>
                <value>
                    <fullName>24 Dias</fullName>
                </value>
                <value>
                    <fullName>12 Dias</fullName>
                </value>
                <value>
                    <fullName>6 Días</fullName>
                </value>
                <value>
                    <fullName>50 Días</fullName>
                </value>
                <value>
                    <fullName>55 Días</fullName>
                </value>
                <value>
                    <fullName>40 Días</fullName>
                </value>
                <value>
                    <fullName>120 Días</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreditoDisponible__c</fullName>
        <label>Pendiente de Pago SAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cuenta_con_SUA_Sistema_nico_de_Autodet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cuenta con SUA (Sistema Único de Autodet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cuenta_con_instrumentos_de_movimiento_de__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cuenta con instrumentos de movimiento de</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <externalId>true</externalId>
        <label>Customer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Portal_Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Portal Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_time_visited__c</fullName>
        <label>Customer time visited</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customs_Code_Number__c</fullName>
        <label>Customs Code Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DGIEQO_Web_Service_IEQO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identificar cuentas que tengan integración de Web Services (WS) para creación de Import-Export Quote/Order (IEQO)</description>
        <label>Web Service IEQO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOT__c</fullName>
        <label>DOT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <label>DUNS#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Receive_from_SAP__c</fullName>
        <label>Date Receive from SAP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_SeguimientoMkt__c</fullName>
        <label>Date Time (Venta)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_planner_con_encuesta__c</fullName>
        <label>Date planner con encuesta</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Times_Score__c</fullName>
        <formula>CASE( Delivery_Times__c, &apos;1&apos;, IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeYm&amp;oid=00Db0000000cLrt&amp;lastMod=1386161894000&apos;, &apos;Colaboration&apos;), &apos;2&apos;, IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeYr&amp;oid=00Db0000000cLrt&amp;lastMod=1386161968000&apos;, &apos;Colaboration&apos;), &apos;3&apos;, IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeYw&amp;oid=00Db0000000cLrt&amp;lastMod=1386162034000&apos;, &apos;Colaboration&apos;), &apos;4&apos;, IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeZ6&amp;oid=00Db0000000cLrt&amp;lastMod=1386162078000&apos;, &apos;Colaboration&apos;), &apos;5&apos;,
 IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeZG&amp;oid=00Db0000000cLrt&amp;lastMod=1386162247000&apos;, &apos;Colaboration&apos;), IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeYm&amp;oid=00Db0000000cLrt&amp;lastMod=1386161894000&apos;, &apos;Colaboration&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Times (Score)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Times__c</fullName>
        <label>Delivery Times</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Lead Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dest_cta__c</fullName>
        <label>Destino</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aguascalientes</fullName>
                </value>
                <value>
                    <fullName>Baja California</fullName>
                </value>
                <value>
                    <fullName>Baja California Sur</fullName>
                </value>
                <value>
                    <fullName>Campeche</fullName>
                </value>
                <value>
                    <fullName>Chiapas</fullName>
                </value>
                <value>
                    <fullName>Chihuahua</fullName>
                </value>
                <value>
                    <fullName>Ciudad de Mexico</fullName>
                </value>
                <value>
                    <fullName>Coahuila de Zaragoza</fullName>
                </value>
                <value>
                    <fullName>Colima</fullName>
                </value>
                <value>
                    <fullName>Durango</fullName>
                </value>
                <value>
                    <fullName>Estado de Mexico</fullName>
                </value>
                <value>
                    <fullName>Guanajuato</fullName>
                </value>
                <value>
                    <fullName>Guerrero</fullName>
                </value>
                <value>
                    <fullName>Hidalgo</fullName>
                </value>
                <value>
                    <fullName>Jalisco</fullName>
                </value>
                <value>
                    <fullName>Michoacan de Ocampo</fullName>
                </value>
                <value>
                    <fullName>Morelos</fullName>
                </value>
                <value>
                    <fullName>Nayarit</fullName>
                </value>
                <value>
                    <fullName>Nuevo Leon</fullName>
                </value>
                <value>
                    <fullName>Oaxaca</fullName>
                </value>
                <value>
                    <fullName>Puebla</fullName>
                </value>
                <value>
                    <fullName>Queretaro</fullName>
                </value>
                <value>
                    <fullName>Quintana Roo</fullName>
                </value>
                <value>
                    <fullName>San Luis Potosi</fullName>
                </value>
                <value>
                    <fullName>Sinaloa</fullName>
                </value>
                <value>
                    <fullName>Sonora</fullName>
                </value>
                <value>
                    <fullName>Tabasco</fullName>
                </value>
                <value>
                    <fullName>Tamaulipas</fullName>
                </value>
                <value>
                    <fullName>Tlaxcala</fullName>
                </value>
                <value>
                    <fullName>Veracruz de Ignacio de la Llave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Developer_Record_Type__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Developer Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dias_transc__c</fullName>
        <formula>DATETIMEVALUE(LastModifiedDate)-  DATETIMEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dias transcurridos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direccion_Principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dirección Principal</label>
        <referenceTo>Account_Address__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dueno_pasado__c</fullName>
        <label>Dueño pasado</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Efficiency_Level_Score__c</fullName>
        <formula>CASE( Efficiency_Level__c, &apos;1&apos;, IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeYm&amp;oid=00Db0000000cLrt&amp;lastMod=1386161894000&apos;, &apos;Colaboration&apos;), &apos;2&apos;, IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeYr&amp;oid=00Db0000000cLrt&amp;lastMod=1386161968000&apos;, &apos;Colaboration&apos;), &apos;3&apos;, IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeYw&amp;oid=00Db0000000cLrt&amp;lastMod=1386162034000&apos;, &apos;Colaboration&apos;), &apos;4&apos;, IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeZ6&amp;oid=00Db0000000cLrt&amp;lastMod=1386162078000&apos;, &apos;Colaboration&apos;), &apos;5&apos;,
 IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeZG&amp;oid=00Db0000000cLrt&amp;lastMod=1386162247000&apos;, &apos;Colaboration&apos;), IMAGE(&apos;https://c.eu2.content.force.com/servlet/servlet.ImageServer?id=015b0000000AeYm&amp;oid=00Db0000000cLrt&amp;lastMod=1386161894000&apos;, &apos;Colaboration&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Efficiency Level (Score)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Efficiency_Level__c</fullName>
        <label>Efficiency Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EjecCob_SAP__c</fullName>
        <label>Ejecutivo de Cobranza</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ejecutivo_Servicio_Clientes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo Servicio Clientes</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Adicional__c</fullName>
        <label>Email Adicional</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Cobranza__c</fullName>
        <label>Email Cobranza</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Contacto_Administrativo__c</fullName>
        <label>Email Contacto Administrativo</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Manager__c</fullName>
        <label>Email Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Encuesta_SCP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Encuesta SCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enviado_SAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviado SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enviar_encuesta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviar encuesta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Especificaciones__c</fullName>
        <label>Especificaciónes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGS</fullName>
                    <label>Aguascalientes</label>
                </value>
                <value>
                    <fullName>BC</fullName>
                    <label>Baja California</label>
                </value>
                <value>
                    <fullName>BCS</fullName>
                    <label>Baja California Sur</label>
                </value>
                <value>
                    <fullName>CAM</fullName>
                    <label>Campeche</label>
                </value>
                <value>
                    <fullName>CHI</fullName>
                    <label>Chihuahua</label>
                </value>
                <value>
                    <fullName>CHS</fullName>
                    <label>Chiapas</label>
                </value>
                <value>
                    <fullName>CM</fullName>
                    <label>Ciudad de Mexico</label>
                </value>
                <value>
                    <fullName>COA</fullName>
                    <label>Coahuila</label>
                </value>
                <value>
                    <fullName>COL</fullName>
                    <label>Colima</label>
                </value>
                <value>
                    <fullName>DF</fullName>
                    <label>Distrito Federal</label>
                </value>
                <value>
                    <fullName>DUR</fullName>
                    <label>Durango</label>
                </value>
                <value>
                    <fullName>GRO</fullName>
                    <label>Guerrero</label>
                </value>
                <value>
                    <fullName>GTO</fullName>
                    <label>Guanajuato</label>
                </value>
                <value>
                    <fullName>HID</fullName>
                    <label>Hidalgo</label>
                </value>
                <value>
                    <fullName>JAL</fullName>
                    <label>Jalisco</label>
                </value>
                <value>
                    <fullName>MCH</fullName>
                    <label>Michoacan</label>
                </value>
                <value>
                    <fullName>MEX</fullName>
                    <label>Estado de México</label>
                </value>
                <value>
                    <fullName>MOR</fullName>
                    <label>Morelos</label>
                </value>
                <value>
                    <fullName>NAY</fullName>
                    <label>Nayarit</label>
                </value>
                <value>
                    <fullName>NL</fullName>
                    <label>Nuevo León</label>
                </value>
                <value>
                    <fullName>OAX</fullName>
                    <label>Oaxaca</label>
                </value>
                <value>
                    <fullName>PUE</fullName>
                    <label>Puebla</label>
                </value>
                <value>
                    <fullName>QR</fullName>
                    <label>Quintana Roo</label>
                </value>
                <value>
                    <fullName>QUE</fullName>
                    <label>Queretaro</label>
                </value>
                <value>
                    <fullName>SIN</fullName>
                    <label>Sinaloa</label>
                </value>
                <value>
                    <fullName>SLP</fullName>
                    <label>San Luis Potosi</label>
                </value>
                <value>
                    <fullName>SON</fullName>
                    <label>Sonora</label>
                </value>
                <value>
                    <fullName>TAB</fullName>
                    <label>Tabasco</label>
                </value>
                <value>
                    <fullName>TAM</fullName>
                    <label>Tamaulipas</label>
                </value>
                <value>
                    <fullName>TLA</fullName>
                    <label>Tlaxcala</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_cat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Precisa el estado, entidad, región, comunidad, u otra figura análoga en donde se encuentra ubicado el domicilio</description>
        <label>Estado</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Estado</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Accounts (Estado)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estatus_Recuperado__c</fullName>
        <label>Estatus de Contacto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cliente Contactado</fullName>
                </value>
                <value>
                    <fullName>Cliente Visitado</fullName>
                </value>
                <value>
                    <fullName>Cliente contactado sin Éxito</fullName>
                </value>
                <value>
                    <fullName>No viable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estatus_cuenta__c</fullName>
        <defaultValue>IF(
   OR(
      $RecordType.DeveloperName = &quot;Prospect Mkt&quot;,
      $RecordType.DeveloperName = &quot;Prospect&quot;,
      $RecordType.DeveloperName = &quot;Prospect Bloq&quot;
   ),
   &quot;Nuevo&quot;,
   &quot;&quot;
)</defaultValue>
        <description>Campo utilizado para determinar el uso de la cuenta</description>
        <label>Estatus de la cuenta</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estatus_de_Alta__c</fullName>
        <label>Estatus de Alta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DOCUMENTOS PENDIENTES</fullName>
                </value>
                <value>
                    <fullName>TELEFONOS NO CORRESPONDEN</fullName>
                </value>
                <value>
                    <fullName>REFERENCIA REQUIERE CORREO PARA DAR INFORMACION</fullName>
                </value>
                <value>
                    <fullName>REFERENCIA NO PROPORCIONA INFORMACION DE CRÉDITO</fullName>
                </value>
                <value>
                    <fullName>REFERENCIA REQUIERE AUTORIZACION DEL CLIENTE</fullName>
                </value>
                <value>
                    <fullName>REFERENCIAS NO APTAS PARA LA LINEA DE CREDITO</fullName>
                </value>
                <value>
                    <fullName>PENDIENTE DE INFORMACION POR PARTE DEL VENDEDOR</fullName>
                </value>
                <value>
                    <fullName>PENDIENTES POR CONTESTAR LAS REERENCIAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estatus_de_cliente__c</fullName>
        <label>Estatus de cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nuevo</fullName>
                    <default>true</default>
                    <label>Nuevo</label>
                </value>
                <value>
                    <fullName>Recurrente</fullName>
                </value>
                <value>
                    <fullName>Perdido</fullName>
                </value>
                <value>
                    <fullName>Recuperado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evidencia_de_Visita_del_Vendedor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evidencia de Visita del Vendedor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Export_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Export Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Export Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Export Company)</relationshipLabel>
        <relationshipName>Accounts_ExportCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FI_Target__c</fullName>
        <label>FI Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FN_Target__c</fullName>
        <label>FN Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Factoraje_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Factoraje</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Factoraje__c</fullName>
        <label>Factoraje</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Factvig_cta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Factura vigente, reciente cancelada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fecha_Actualizacion_Cliente_SAP__c</fullName>
        <label>Fecha Actualización Cliente SAP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_Alta_Cliente_SAP__c</fullName>
        <label>Fecha Alta Cliente SAP</label>
        <type>DateTime</type>
    </fields>
</CustomObject>